[package]
name = "blakediff"
version = "0.1.0"
edition = "2021"
authors = ["Jérémie <jeremie-H@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.3.3", features = ["rayon"] }
clap = { version = "4.0.27", features = ["derive", "color", "help"] }
took = "0.1.2"
memmap2 = "0.5.8"

rayon = "1.6.0"
