[package]
name = "blakediff"
version = "0.1.0"
edition = "2021"
authors = ["Jérémie <jeremie-H@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.3.3", features = ["rayon"] }
clap = { version = "4.0.27", features = ["cargo", "derive", "color", "help"] }
clap-verbosity-flag = "2.0.0"
log = "0.4.17"
env_logger = "0.10.0"
took = "0.1.2"
memmap2 = "0.5.8"
itertools = "0.10.5"
rayon = "1.6.0"
