[package]
name = "blakediff"
version = "0.1.0"
edition = "2021"
authors = ["Jérémie <jeremie-H@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.5", features = ["rayon"] }
clap = { version = "4.5", features = ["cargo", "derive", "color", "help"] }
clap-verbosity-flag = "2.2"
log = "0.4"
env_logger = "0.11"
took = "0.1"
memmap2 = "0.9"
itertools = "0.13"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.8"
